sintatico/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PROGRAM shift to state 1
-- On programa shift to state 168

State 1:
programa -> PROGRAM . ID PONTOVIRG list(declaracao_funcao) list(declaracao) BEGIN list(comando) ENDPROG EOF [ # ]
-- On ID shift to state 2

State 2:
programa -> PROGRAM ID . PONTOVIRG list(declaracao_funcao) list(declaracao) BEGIN list(comando) ENDPROG EOF [ # ]
-- On PONTOVIRG shift to state 3

State 3:
programa -> PROGRAM ID PONTOVIRG . list(declaracao_funcao) list(declaracao) BEGIN list(comando) ENDPROG EOF [ # ]
-- On FUNCAO shift to state 4
-- On list(declaracao_funcao) shift to state 160
-- On declaracao_funcao shift to state 166
-- On VAR reduce production list(declaracao_funcao) -> 
-- On ID reduce production list(declaracao_funcao) -> 
-- On BEGIN reduce production list(declaracao_funcao) -> 

State 4:
declaracao_funcao -> FUNCAO . ID APAR parametros FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On ID shift to state 5

State 5:
declaracao_funcao -> FUNCAO ID . APAR parametros FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On APAR shift to state 6

State 6:
declaracao_funcao -> FUNCAO ID APAR . parametros FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On ID shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 10
-- On parametros shift to state 11
-- On loption(separated_nonempty_list(VIRG,ID)) shift to state 157
-- On DOISPONTOS reduce production loption(separated_nonempty_list(VIRG,ID)) -> 

State 7:
separated_nonempty_list(VIRG,ID) -> ID . [ DOISPONTOS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On VIRG shift to state 8
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 8:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DOISPONTOS ]
-- On ID shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 9

State 9:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DOISPONTOS ]
-- On DOISPONTOS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 10:
loption(separated_nonempty_list(VIRG,ID)) -> separated_nonempty_list(VIRG,ID) . [ DOISPONTOS ]
-- On DOISPONTOS reduce production loption(separated_nonempty_list(VIRG,ID)) -> separated_nonempty_list(VIRG,ID) 

State 11:
declaracao_funcao -> FUNCAO ID APAR parametros . FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On FPAR shift to state 12

State 12:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR . DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On DOISPONTOS shift to state 13

State 13:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS . tipo_simples PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On STRING shift to state 14
-- On REAL shift to state 15
-- On INTEGER shift to state 16
-- On CHAR shift to state 17
-- On BOOLEAN shift to state 18
-- On tipo_simples shift to state 19

State 14:
tipo_simples -> STRING . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production tipo_simples -> STRING 
-- On FPAR reduce production tipo_simples -> STRING 

State 15:
tipo_simples -> REAL . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production tipo_simples -> REAL 
-- On FPAR reduce production tipo_simples -> REAL 

State 16:
tipo_simples -> INTEGER . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production tipo_simples -> INTEGER 
-- On FPAR reduce production tipo_simples -> INTEGER 

State 17:
tipo_simples -> CHAR . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production tipo_simples -> CHAR 
-- On FPAR reduce production tipo_simples -> CHAR 

State 18:
tipo_simples -> BOOLEAN . [ PONTOVIRG FPAR ]
-- On PONTOVIRG reduce production tipo_simples -> BOOLEAN 
-- On FPAR reduce production tipo_simples -> BOOLEAN 

State 19:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples . PONTOVIRG list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On PONTOVIRG shift to state 20

State 20:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples PONTOVIRG . list(declaracao) BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On VAR shift to state 21
-- On ID shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 27
-- On list(declaracao) shift to state 31
-- On declaracao shift to state 155
-- On BEGIN reduce production list(declaracao) -> 

State 21:
declaracao -> VAR . separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On ID shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 22

State 22:
declaracao -> VAR separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On DOISPONTOS shift to state 23

State 23:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo PONTOVIRG [ VAR ID BEGIN ]
-- On STRING shift to state 14
-- On REAL shift to state 15
-- On INTEGER shift to state 16
-- On CHAR shift to state 17
-- On BOOLEAN shift to state 18
-- On tipo_simples shift to state 24
-- On tipo shift to state 25

State 24:
tipo -> tipo_simples . [ PONTOVIRG ]
-- On PONTOVIRG reduce production tipo -> tipo_simples 

State 25:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo . PONTOVIRG [ VAR ID BEGIN ]
-- On PONTOVIRG shift to state 26

State 26:
declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG . [ VAR ID BEGIN ]
-- On VAR reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On ID reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On BEGIN reduce production declaracao -> VAR separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 

State 27:
declaracao -> separated_nonempty_list(VIRG,ID) . DOISPONTOS tipo PONTOVIRG [ VAR ID BEGIN ]
-- On DOISPONTOS shift to state 28

State 28:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS . tipo PONTOVIRG [ VAR ID BEGIN ]
-- On STRING shift to state 14
-- On REAL shift to state 15
-- On INTEGER shift to state 16
-- On CHAR shift to state 17
-- On BOOLEAN shift to state 18
-- On tipo_simples shift to state 24
-- On tipo shift to state 29

State 29:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo . PONTOVIRG [ VAR ID BEGIN ]
-- On PONTOVIRG shift to state 30

State 30:
declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG . [ VAR ID BEGIN ]
-- On VAR reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On ID reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 
-- On BEGIN reduce production declaracao -> separated_nonempty_list(VIRG,ID) DOISPONTOS tipo PONTOVIRG 

State 31:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) . BEGIN list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On BEGIN shift to state 32

State 32:
declaracao_funcao -> FUNCAO ID APAR parametros FPAR DOISPONTOS tipo_simples PONTOVIRG list(declaracao) BEGIN . list(comando) END PONTOVIRG [ VAR ID FUNCAO BEGIN ]
-- On WHILE shift to state 33
-- On PRINTLN shift to state 81
-- On PRINT shift to state 86
-- On LEIALN shift to state 91
-- On LEIA shift to state 94
-- On IF shift to state 97
-- On ID shift to state 37
-- On FOR shift to state 101
-- On CASE shift to state 110
-- On variavel shift to state 115
-- On list(comando) shift to state 152
-- On comando_while shift to state 119
-- On comando_se shift to state 120
-- On comando_saida shift to state 121
-- On comando_funcao shift to state 122
-- On comando_for shift to state 123
-- On comando_entrada shift to state 124
-- On comando_case shift to state 125
-- On comando_atribuicao shift to state 126
-- On comando shift to state 139
-- On END reduce production list(comando) -> 

State 33:
comando_while -> WHILE . expressao DO BEGIN list(comando) END PONTOVIRG [ WHILE PRINTLN PRINT LITSTRING LITREAL LITINT LEIALN LEIA IF ID FOR ENDPROG END ELSE CASE APAR ]
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expressao shift to state 78
-- On comando_funcao shift to state 50

State 34:
expressao -> LITSTRING . [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On TO reduce production expressao -> LITSTRING 
-- On THEN reduce production expressao -> LITSTRING 
-- On PONTOVIRG reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On MULTIPLICA reduce production expressao -> LITSTRING 
-- On MODULO reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DOISPONTOS reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIVIDE reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 35:
expressao -> LITREAL . [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITREAL 
-- On TO reduce production expressao -> LITREAL 
-- On THEN reduce production expressao -> LITREAL 
-- On PONTOVIRG reduce production expressao -> LITREAL 
-- On OU reduce production expressao -> LITREAL 
-- On MULTIPLICA reduce production expressao -> LITREAL 
-- On MODULO reduce production expressao -> LITREAL 
-- On MENOS reduce production expressao -> LITREAL 
-- On MENORIGUAL reduce production expressao -> LITREAL 
-- On MENOR reduce production expressao -> LITREAL 
-- On MAIS reduce production expressao -> LITREAL 
-- On MAIORIGUAL reduce production expressao -> LITREAL 
-- On MAIOR reduce production expressao -> LITREAL 
-- On IGUAL reduce production expressao -> LITREAL 
-- On FPAR reduce production expressao -> LITREAL 
-- On E reduce production expressao -> LITREAL 
-- On DOISPONTOS reduce production expressao -> LITREAL 
-- On DO reduce production expressao -> LITREAL 
-- On DIVIDE reduce production expressao -> LITREAL 
-- On DIFERENTE reduce production expressao -> LITREAL 

State 36:
expressao -> LITINT . [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On TO reduce production expressao -> LITINT 
-- On THEN reduce production expressao -> LITINT 
-- On PONTOVIRG reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On MULTIPLICA reduce production expressao -> LITINT 
-- On MODULO reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DOISPONTOS reduce production expressao -> LITINT 
-- On DO reduce production expressao -> LITINT 
-- On DIVIDE reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 37:
comando_funcao -> ID . APAR option(__anonymous_0) FPAR [ WHILE VIRG TO THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END ELSE E DOISPONTOS DO DIVIDE DIFERENTE CASE APAR ]
variavel -> ID . [ VIRG TO THEN PONTOVIRG PONTO OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ATRIB ]
-- On APAR shift to state 38
-- On VIRG reduce production variavel -> ID 
-- On TO reduce production variavel -> ID 
-- On THEN reduce production variavel -> ID 
-- On PONTOVIRG reduce production variavel -> ID 
-- On PONTO reduce production variavel -> ID 
-- On OU reduce production variavel -> ID 
-- On MULTIPLICA reduce production variavel -> ID 
-- On MODULO reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On E reduce production variavel -> ID 
-- On DOISPONTOS reduce production variavel -> ID 
-- On DO reduce production variavel -> ID 
-- On DIVIDE reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 

State 38:
comando_funcao -> ID APAR . option(__anonymous_0) FPAR [ WHILE VIRG TO THEN PRINTLN PRINT PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITREAL LITINT LEIALN LEIA IGUAL IF ID FPAR FOR ENDPROG END ELSE E DOISPONTOS DO DIVIDE DIFERENTE CASE APAR ]
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On separated_nonempty_list(VIRG,expressao) shift to state 72
-- On option(__anonymous_0) shift to state 73
-- On expressao shift to state 75
-- On comando_funcao shift to state 50
-- On FPAR reduce production option(__anonymous_0) -> 

State 39:
expressao -> APAR . expressao FPAR [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expressao shift to state 43
-- On comando_funcao shift to state 50

State 40:
expressao -> variavel . [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
variavel -> variavel . PONTO ID [ VIRG TO THEN PONTOVIRG PONTO OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On PONTO shift to state 41
-- On VIRG reduce production expressao -> variavel 
-- On TO reduce production expressao -> variavel 
-- On THEN reduce production expressao -> variavel 
-- On PONTOVIRG reduce production expressao -> variavel 
-- On OU reduce production expressao -> variavel 
-- On MULTIPLICA reduce production expressao -> variavel 
-- On MODULO reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On E reduce production expressao -> variavel 
-- On DOISPONTOS reduce production expressao -> variavel 
-- On DO reduce production expressao -> variavel 
-- On DIVIDE reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 

State 41:
variavel -> variavel PONTO . ID [ VIRG TO THEN PONTOVIRG PONTO OU OF MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ATRIB ]
-- On ID shift to state 42

State 42:
variavel -> variavel PONTO ID . [ VIRG TO THEN PONTOVIRG PONTO OU OF MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production variavel -> variavel PONTO ID 
-- On TO reduce production variavel -> variavel PONTO ID 
-- On THEN reduce production variavel -> variavel PONTO ID 
-- On PONTOVIRG reduce production variavel -> variavel PONTO ID 
-- On PONTO reduce production variavel -> variavel PONTO ID 
-- On OU reduce production variavel -> variavel PONTO ID 
-- On OF reduce production variavel -> variavel PONTO ID 
-- On MULTIPLICA reduce production variavel -> variavel PONTO ID 
-- On MODULO reduce production variavel -> variavel PONTO ID 
-- On MENOS reduce production variavel -> variavel PONTO ID 
-- On MENORIGUAL reduce production variavel -> variavel PONTO ID 
-- On MENOR reduce production variavel -> variavel PONTO ID 
-- On MAIS reduce production variavel -> variavel PONTO ID 
-- On MAIORIGUAL reduce production variavel -> variavel PONTO ID 
-- On MAIOR reduce production variavel -> variavel PONTO ID 
-- On IGUAL reduce production variavel -> variavel PONTO ID 
-- On FPAR reduce production variavel -> variavel PONTO ID 
-- On E reduce production variavel -> variavel PONTO ID 
-- On DOISPONTOS reduce production variavel -> variavel PONTO ID 
-- On DO reduce production variavel -> variavel PONTO ID 
-- On DIVIDE reduce production variavel -> variavel PONTO ID 
-- On DIFERENTE reduce production variavel -> variavel PONTO ID 
-- On ATRIB reduce production variavel -> variavel PONTO ID 

State 43:
expressao -> expressao . MAIS expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MODULO expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> APAR expressao . FPAR [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On OU shift to state 44
-- On MULTIPLICA shift to state 46
-- On MODULO shift to state 53
-- On MENOS shift to state 48
-- On MENORIGUAL shift to state 55
-- On MENOR shift to state 59
-- On MAIS shift to state 51
-- On MAIORIGUAL shift to state 61
-- On MAIOR shift to state 63
-- On IGUAL shift to state 65
-- On FPAR shift to state 71
-- On E shift to state 67
-- On DIVIDE shift to state 57
-- On DIFERENTE shift to state 69

State 44:
expressao -> expressao OU . expressao [ VIRG TO THEN PONTOVIRG OU MULTIPLICA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DO DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 34
-- On LITREAL shift to state 35
-- On LITINT shift to state 36
-- On ID shift to state 37
-- On APAR shift to state 39
-- On variavel shift to state 40
-- On expressao shift to state 45
-- On comando_funcao shift to state 50
